<resources>
    <string name="app_name">planties</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_log_in">Log In</string>
    <string name="label_log_out">Log Out</string>
    <string name="label_wellcome_back">Wellcome back 👋</string>
    <string name="label_email_address">Email address</string>
    <string name="label_password">Password</string>
    <string name="label_reset_password"><u>Reset Password</u></string>
    <string name="label_don_t_have_an_account_register">Don’t have an account? <u>Register</u></string>
    <string name="label_Already_have_account_register">Already have account? <u>Log in</u></string>
    <string name="label_register">Register</string>
    <string name="label_let_s_make_an_account">Let’s make an account</string>
    <string name="label_name">Name</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_welcome_back">Welcome Back</string>
    <string name="emoticon_hello">👋</string>
    <string name="label_kamu_mau_mencari_tanaman">Kamu mau mencari Tanaman?</string>
    <string name="label_selamat_pagi">Selamat Pagi</string>
    <string name="desc_sudahkah_kamu_menyiram_tanamanmu">Sudahkah kamu menyiram tanamanmu?</string>
    <string name="label_scan_tanaman">Scan Tanaman</string>
    <string name="label_tamanmu">Tamanmu</string>
    <string name="label_tanamanmu">Tanamanmu</string>
    <string name="format_kamu_memiliki_taman">Kamu memiliki %d Taman</string>
    <string name="format_water_time">%d hour</string>
    <string name="label_tambah_taman">Tambah taman</string>
    <string name="label_oksigen">Oksigen</string>
    <string name="format_peringkat">#%d</string>
    <string name="label_peringkat_kamu">Peringkat Kamu</string>
    <string name="format_menghasilkan_oksigen">Kamu telah menghasilkan <annotation font="lexend_semibold">%s mg</annotation> oksigen</string>
    <string name="label_untukbumi">#untukbumi</string>
    <string name="label_perhatikan_tanamanmu">Perhatikan Tanamanmu</string>
    <string name="label_semua">Semua</string>
    <string name="label_terburuk">Terburuk</string>
    <string name="label_username">Username</string>
    <string name="label_photos">Photos</string>
    <string name="desc_photos">Lihat tamanmu</string>
    <string name="label_simpan">Simpan</string>
    <string name="label_tipe_tanaman">Tipe Tanaman</string>
    <string name="label_tanaman">Tanaman</string>
    <string name="label_galery">Galery</string>
    <string name="label_taman">Taman</string>
    <string name="label_status">Status</string>
    <string name="label_water">WATER</string>
    <string name="label_home">Home</string>
    <string name="label_plant_care">Plant Care</string>
    <string name="label_scan_plant">Scan Plant</string>
    <string name="label_apa_yang_ingin_kamu_lakukan">Apa yang ingin kamu lakukan?</string>
    <string name="label_diagnosis">Diagnosis</string>
    <string name="label_identifying">Identifying</string>
    <string name="label_mendiagnosis_tanamanmu">Mendiagnosis tanamanmu…</string>
    <string name="desc_tanamanmu">Lihat tanamanmu yang ada pada taman ini</string>
    <string name="label_edit_taman">Edit Taman</string>
    <string name="label_masukkan_nama">Masukkan nama</string>
    <string name="label_terbaru">Terbaru</string>
    <string name="label_kebun">Kebun</string>
    <string name="label_kamu_belum_memiliki_tanaman">Kamu belum memiliki tanaman! Ayo Tanam!</string>
    <string name="label_selesai_diagnosis">Selesai Diagnosis</string>
    <string name="format_ai_confident">Ai %s Confident</string>
    <string name="label_kontribusi_oksigen">kontribusi oksigen</string>
    <string name="label_mg_o2">mg O2</string>
    <string name="label_leaderboard">Leaderboard</string>
    <string name="label_profile">Profile</string>
    <string name="label_admin">Admin</string>
    <string name="label_analytical_statistic">Analytical Statistic</string>
    <string name="label_other_information">Other Information</string>
    <string name="label_total_user">Total User</string>
    <string name="format_total_user">Terdapat %d total user</string>
    <string name="format_new_user">Terdapat %d total user baru</string>
    <string name="label_total_new_user">Total New User</string>
    <string name="label_tipe_taman">Tipe Taman</string>
    <string name="update_leaderboard">Update Leaderboard</string>
    <string name="label_need_water">Need Water!</string>
</resources>