<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Neutral2"
    tools:context=".features.oxygen_leaderboard.LeaderboardsFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_leaderboards"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_16dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_oxygen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_container_default_active"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_polygon1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-60dp"
                        android:layout_marginTop="-80dp"
                        android:src="@drawable/img_polygon1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_polygon2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/img_polygon2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/tv_label_kontribusi_oksigen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_kontribusi_oksigen"
                        android:layout_marginStart="@dimen/margin_4dp"
                        android:textAppearance="@style/TextAppearance.Planties.Subtitle1"
                        android:textColor="@color/Blue300"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_format_peringkat"
                        app:layout_constraintStart_toEndOf="@id/tv_format_peringkat"
                        app:layout_constraintTop_toTopOf="@+id/tv_format_peringkat" />

                    <TextView
                        android:id="@+id/tv_format_peringkat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_12dp"
                        android:text="@string/format_peringkat"
                        android:textAppearance="@style/TextAppearance.Planties.Title2"
                        android:textColor="@color/Blue500"
                        app:layout_constraintTop_toBottomOf="@id/iv_polygon1"
                        app:layout_constraintBottom_toTopOf="@+id/tv_label_oxygen"
                        app:layout_constraintStart_toStartOf="@id/tv_label_oxygen" />

                    <TextView
                        android:id="@+id/tv_label_oxygen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_22dp"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:text="@string/label_oksigen"
                        android:textAppearance="@style/TextAppearance.Planties.Title1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_format_peringkat" />

                    <TextView
                        android:id="@+id/tv_label_untukbumi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:text="@string/label_untukbumi"
                        android:textAllCaps="false"
                        android:textAppearance="@style/TextAppearance.Planties.Button3"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_label_oxygen"
                        app:layout_constraintStart_toEndOf="@+id/tv_label_oxygen" />

                    <TextView
                        android:id="@+id/tv_desc_detail_oxygen"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_6dp"
                        android:layout_marginEnd="@dimen/margin_52dp"
                        android:layout_marginBottom="@dimen/margin_26dp"
                        android:text="@string/format_menghasilkan_oksigen"
                        android:textAppearance="@style/TextAppearance.Planties.Subtitle1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/iv_polygon2"
                        app:layout_constraintStart_toStartOf="@+id/tv_label_oxygen"
                        app:layout_constraintTop_toBottomOf="@id/tv_label_oxygen" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_leaderboards"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="@dimen/margin_24dp"
                    android:layout_marginTop="@dimen/margin_12dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@id/cl_oxygen"
                    tools:listitem="@layout/item_leaderboard"/>

                <include
                    android:id="@+id/tb_leaderboards"
                    layout="@layout/layout_toolbar_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>