<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.plant_care.garden.detail.GardenDetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/margin_16dp">

            <include
                android:id="@+id/tb_garden_detail"
                layout="@layout/layout_toolbar_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_label_photos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_photos"
                android:textAppearance="@style/TextAppearance.Planties.Title2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tb_garden_detail" />

            <TextView
                android:id="@+id/tv_desc_photos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_4dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/desc_photos"
                android:textAppearance="@style/TextAppearance.Planties.Body1"
                android:textColor="@color/Neutral3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_photos" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_photos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="@id/tv_desc_photos"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_photos"
                tools:listitem="@layout/item_photos" />

            <TextView
                android:id="@+id/tv_label_tanamanmu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_28dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/label_tanamanmu"
                android:textAppearance="@style/TextAppearance.Planties.Title2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_photos" />

            <TextView
                android:id="@+id/tv_desc_tanamanmu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_4dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.Planties.Body1"
                android:textColor="@color/Neutral3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_tanamanmu"
                tools:text="@tools:sample/lorem/random" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_desc_tanamanmu">

                <include
                    android:id="@+id/filter"
                    layout="@layout/layout_filter" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_garden"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_24dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_filter"
                tools:listitem="@layout/item_plant" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>